--- a/polygerrit-ui/app/elements/shared/gr-date-formatter/gr-date-formatter_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-date-formatter/gr-date-formatter_test.html
@@ -78,13 +78,13 @@ limitations under the License.
 
     suite('24 hours time format preference', function() {
       setup(function(done) {
-        return stubRestAPI(
+        stubRestAPI(
           {time_format: 'HHMM_24', relative_date_in_change_table: false}
         ).then(function() {
           element = fixture('basic');
           sandbox.stub(element, '_getTzString').returns('');
           sandbox.stub(element, '_getUtcOffsetString').returns('');
-          element._loadPreferences().then(function() { done(); });
+          element._loadPreferences().then(function() { return done(); });
         });
       });
 
@@ -121,13 +121,13 @@ limitations under the License.
     suite('12 hours time format preference', function() {
       setup(function(done) {
         // relative_date_in_change_table is not set when false.
-        return stubRestAPI(
+        stubRestAPI(
           {time_format: 'HHMM_12'}
         ).then(function() {
           element = fixture('basic');
           sandbox.stub(element, '_getTzString').returns('');
           sandbox.stub(element, '_getUtcOffsetString').returns('');
-          element._loadPreferences().then(function() { done(); });
+          element._loadPreferences().then(function() { return done(); });
         });
       });
 
@@ -140,13 +140,13 @@ limitations under the License.
 
     suite('relative date preference', function() {
       setup(function(done) {
-        return stubRestAPI(
+        stubRestAPI(
           {time_format: 'HHMM_12', relative_date_in_change_table: true}
         ).then(function() {
           element = fixture('basic');
           sandbox.stub(element, '_getTzString').returns('');
           sandbox.stub(element, '_getUtcOffsetString').returns('');
-          element._loadPreferences().then(function() { done(); });
+          element._loadPreferences().then(function() { return done(); });
         });
       });
 
@@ -165,12 +165,12 @@ limitations under the License.
 
     suite('logged in', function() {
       setup(function(done) {
-        return stubRestAPI(
+        stubRestAPI(
           {time_format: 'HHMM_12', relative_date_in_change_table: true}
         ).then(function() {
           element = fixture('basic');
           sandbox.stub(element, '_getTzString').returns('');
-          element._loadPreferences().then(function() { done(); });
+          element._loadPreferences().then(function() { return done(); });
         });
       });
 
@@ -182,10 +182,10 @@ limitations under the License.
 
     suite('logged out', function() {
       setup(function(done) {
-        return stubRestAPI(null).then(function() {
+        stubRestAPI(null).then(function() {
           element = fixture('basic');
           sandbox.stub(element, '_getTzString').returns('');
-          element._loadPreferences().then(function() { done(); });
+          element._loadPreferences().then(function() { return done(); });
         });
       });
 
