--- a/polygerrit-ui/app/elements/diff/gr-diff-builder/gr-diff-builder_test.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-builder/gr-diff-builder_test.html
@@ -958,7 +958,8 @@ limitations under the License.
         assert.equal(result, expected);
 
         input = '& < > " \' / `';
-        expected = '&amp; &lt; &gt; &quot; &#39; &#x2F; &#96;';
+        expected = '\u0026amp; \u0026lt; \u0026gt; \u0026quot;' +
+          ' \u0026#39; \u0026#x2F; \u0026#96;';
         result = GrDiffBuilder.prototype._escapeHTML(input);
         assert.equal(result, expected);
       });
