Remove zero space char from linkify
In a previous change, a zero space char was added in order for linkify
to not link R= as part of am email address. At the time, we concluded
that a zero width space would not be an issue for users. After receiving
a complaint, this change removes the added zero width space after
linkificataion.

Because the space has to get removed in the linked text parser, an
optional parameter is added to gr-linked-text indicating that this
removal will need to take place. Because it is only needed in the commit
message, this avoids doing the replacement search for all other linked
text areas.

Bug: Issue 5339
Change-Id: I3d7b29106cafab61193e6fb65225fc3325104756

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
@@ -316,7 +316,8 @@ limitations under the License.
                   content="{{_latestCommitMessage}}">
                 <gr-linked-text pre
                     content="[[_latestCommitMessage]]"
-                    config="[[_projectConfig.commentlinks]]"></gr-linked-text>
+                    config="[[_projectConfig.commentlinks]]"
+                    remove-zero-width-space="true"></gr-linked-text>
               </gr-editable-content>
               <gr-button link
                   class="editCommitMessage"
