Lighten text color for primary/disabled buttons
Bug: Issue 5355
Change-Id: I68570d5bef704f59f3f4a94fe61b9e8a2f4ae424

--- a/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
+++ b/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
@@ -128,6 +128,7 @@ limitations under the License.
       }
       :host([primary][disabled]) {
         background-color: #888;
+        color: #efefef;
       }
     </style>
     <content></content>
