Modify text & background color for primary/disabled buttons
Bug: Issue 5355
Change-Id: I68570d5bef704f59f3f4a94fe61b9e8a2f4ae424

--- a/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
+++ b/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
@@ -127,7 +127,9 @@ limitations under the License.
         color: #fff;
       }
       :host([primary][disabled]) {
-        background-color: #888;
+        background-color: #4d90fe;
+        color: #fff;
+        opacity: .5;
       }
     </style>
     <content></content>
