--- a/polygerrit-ui/app/styles/gr-change-list-styles.html
+++ b/polygerrit-ui/app/styles/gr-change-list-styles.html
@@ -39,40 +39,26 @@ limitations under the License.
       gr-change-star {
         vertical-align: middle;
       }
-      .number {
-        max-width: 4em;
-      }
-      .subject {
-        word-break: break-word;
-      }
-      .status {
-        max-width: 9em;
-      }
-      .owner {
-        max-width: 15em;
-      }
-      .project,
-      .branch {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-      }
+      .keyboard,
+      .branch,
+      .star,
+      .label,
+      .number,
+      .owner,
+      .updated,
+      .size,
+      .status,
       .project {
-        max-width: 10em;
-      }
-      .branch {
-        max-width: 7em;
+        white-space: nowrap;
       }
       .updated {
-        max-width: 9em;
         text-align: right;
       }
-      .size {
-        max-width: 9em;
+      .size,
+      .updated {
         text-align: right;
       }
       .label {
-        max-width: 2.6em;
         text-align: center;
       }
       @media only screen and (max-width: 50em) {
