Hide trailing margin on some formatted texts
Bug: Issue 5422
Change-Id: Id67b2a1cc10492a2c60e1c045dcb8977987595d9

--- a/polygerrit-ui/app/elements/change/gr-comment-list/gr-comment-list.html
+++ b/polygerrit-ui/app/elements/change/gr-comment-list/gr-comment-list.html
@@ -62,7 +62,9 @@ limitations under the License.
                File comment:
              </span>
           </a>
-          <gr-formatted-text class="message"
+          <gr-formatted-text
+              class="message"
+              no-trailing-margin
               content="[[comment.message]]"
               config="[[projectConfig.commentlinks]]"></gr-formatted-text>
         </div>
