Fix range issue with comment replies
- Adds range when parent exists when comment POSTed
- Finds range via filtering comments for backfill

Change-Id: Ied19cc4b33749ba81fad6d1a5030abab419b1e6f

--- a/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface_test.html
@@ -436,5 +436,13 @@ limitations under the License.
         done();
       });
     });
+
+    test('addCommentRange', function(){
+      comments = [{id: 123, range: 'range'}, {id: 234, in_reply_to: 123}];
+      comments.forEach(element._addCommentRange);
+      assert.deepEqual(comments, [{id: 123, range: 'range'},
+          {id: 234, in_reply_to: 123, range: 'range'}]);
+    });
+
   });
 </script>
