--- a/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
+++ b/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
@@ -80,19 +80,16 @@ limitations under the License.
           lines_inserted: 9,
           lines_deleted: 0,
           __path: '/COMMIT_MSG',
-          __expanded: false,
         });
         assert.deepEqual(files[1], {
           lines_inserted: 0,
           lines_deleted: 0,
           __path: 'about.txt',
-          __expanded: false,
         });
         assert.deepEqual(files[2], {
           lines_inserted: 0,
           lines_deleted: 123,
           __path: 'tags.html',
-          __expanded: false,
         });
 
         getChangeFilesStub.restore();
@@ -270,9 +267,9 @@ limitations under the License.
     suite('keyboard shortcuts', function() {
       setup(function() {
         element._files = [
-          {__path: '/COMMIT_MSG', __expanded: false},
-          {__path: 'file_added_in_rev2.txt', __expanded: false},
-          {__path: 'myfile.txt', __expanded: false},
+          {__path: '/COMMIT_MSG'},
+          {__path: 'file_added_in_rev2.txt'},
+          {__path: 'myfile.txt'},
         ];
         element.changeNum = '42';
         element.patchRange = {
@@ -333,29 +330,30 @@ limitations under the License.
       });
 
       test('i key shows/hides selected inline diff', function() {
+        sandbox.stub(element, '_expandedPathsChanged');
         flushAsynchronousOperations();
         element.$.fileCursor.stops = element.diffs;
         element.$.fileCursor.setCursorAtIndex(0);
         MockInteractions.pressAndReleaseKeyOn(element, 73, null, 'i');
         flushAsynchronousOperations();
-        assert.isFalse(element.diffs[0].hasAttribute('hidden'));
+        assert.include(element._expandedFilePaths, element.diffs[0].path);
         MockInteractions.pressAndReleaseKeyOn(element, 73, null, 'i');
         flushAsynchronousOperations();
-        assert.isTrue(element.diffs[0].hasAttribute('hidden'));
+        assert.notInclude(element._expandedFilePaths, element.diffs[0].path);
         element.$.fileCursor.setCursorAtIndex(1);
         MockInteractions.pressAndReleaseKeyOn(element, 73, null, 'i');
         flushAsynchronousOperations();
-        assert.isFalse(element.diffs[1].hasAttribute('hidden'));
+        assert.include(element._expandedFilePaths, element.diffs[1].path);
 
         MockInteractions.pressAndReleaseKeyOn(element, 73, 'shift', 'i');
         flushAsynchronousOperations();
         for (var index in element.diffs) {
-          assert.isFalse(element.diffs[index].hasAttribute('hidden'));
+          assert.include(element._expandedFilePaths, element.diffs[index].path);
         }
         MockInteractions.pressAndReleaseKeyOn(element, 73, 'shift', 'i');
         flushAsynchronousOperations();
         for (var index in element.diffs) {
-          assert.isTrue(element.diffs[index].hasAttribute('hidden'));
+          assert.notInclude(element._expandedFilePaths, element.diffs[index].path);
         }
       });
     });
@@ -440,9 +438,9 @@ limitations under the License.
 
     test('file review status', function() {
       element._files = [
-        {__path: '/COMMIT_MSG', __expanded: false},
-        {__path: 'file_added_in_rev2.txt', __expanded: false},
-        {__path: 'myfile.txt', __expanded: false},
+        {__path: '/COMMIT_MSG'},
+        {__path: 'file_added_in_rev2.txt'},
+        {__path: 'myfile.txt'},
       ];
       element._reviewed = ['/COMMIT_MSG', 'myfile.txt'];
       element.changeNum = '42';
@@ -537,7 +535,7 @@ limitations under the License.
 
     test('checkbox shows/hides diff inline', function() {
       element._files = [
-        {__path: 'myfile.txt', __expanded: false},
+        {__path: 'myfile.txt'},
       ];
       element.changeNum = '42';
       element.patchRange = {
@@ -545,14 +543,16 @@ limitations under the License.
         patchNum: '2',
       };
       element.$.fileCursor.setCursorAtIndex(0);
+      sandbox.stub(element, '_expandedPathsChanged');
       flushAsynchronousOperations();
       var fileRows =
           Polymer.dom(element.root).querySelectorAll('.row:not(.header)');
       var showHideCheck = fileRows[0].querySelector(
           'input.show-hide[type="checkbox"]');
-      assert.isTrue(showHideCheck.checked);
+      assert.isNotOk(showHideCheck.checked);
       MockInteractions.tap(showHideCheck);
-      assert.isFalse(element.diffs[0].hidden);
+      assert.isOk(showHideCheck.checked);
+      assert.notEqual(element._expandedFilePaths.indexOf('myfile.txt'), -1);
     });
 
     test('path should be properly escaped', function() {
@@ -575,7 +575,7 @@ limitations under the License.
 
     test('diff mode correctly toggles the diffs', function() {
       element._files = [
-        {__path: 'myfile.txt', __expanded: false},
+        {__path: 'myfile.txt'},
       ];
       element.changeNum = '42';
       element.patchRange = {
@@ -628,7 +628,7 @@ limitations under the License.
         assert.isTrue(computeSpy.lastCall.returnValue);
         var arr = [];
         _.times(element._maxFilesForBulkActions + 1, function() {
-          arr.push({__path: 'myfile.txt', __expanded: false});
+          arr.push({__path: 'myfile.txt'});
         });
         element._files = arr;
         element._numFilesShown = arr.length;
@@ -639,7 +639,7 @@ limitations under the License.
 
     test('expanded attribute not set on path when not expanded', function() {
       element._files = [
-        {__path: '/COMMIT_MSG', __expanded: false},
+        {__path: '/COMMIT_MSG'},
       ];
       assert.isNotOk(element.$$('.expanded'));
     });
@@ -659,13 +659,14 @@ limitations under the License.
     });
     test('expand_inline_diffs user preference', function() {
       element._files = [
-        {__path: '/COMMIT_MSG', __expanded: false},
+        {__path: '/COMMIT_MSG'},
       ];
       element.changeNum = '42';
       element.patchRange = {
         basePatchNum: 'PARENT',
         patchNum: '2',
       };
+      sandbox.stub(element, '_expandedPathsChanged');
       flushAsynchronousOperations();
       var commitMsgFile = Polymer.dom(element.root)
           .querySelectorAll('.row:not(.header) a')[0];
@@ -685,6 +686,60 @@ limitations under the License.
       flushAsynchronousOperations();
       assert(hiddenChangeSpy.calledOnce, 'file is expanded');
       assert.isOk(element.$$('.expanded'));
+    });
+
+    test('_togglePathExpanded', function() {
+      var path = 'path/to/my/file.txt';
+      element.files = [{__path: path}];
+      var expandedChangedStub = sandbox.stub(element, '_expandedPathsChanged');
+
+      assert.equal(element._expandedFilePaths.length, 0);
+      element._togglePathExpanded(path);
+      assert.equal(expandedChangedStub.callCount, 1);
+      assert.include(element._expandedFilePaths, path);
+      element._togglePathExpanded(path);
+      assert.equal(expandedChangedStub.callCount, 2);
+      assert.notInclude(element._expandedFilePaths, path);
+    });
+
+    test('_expandedPathsChanged', function(done) {
+      var path = 'path/to/my/file.txt';
+      var diffs = [{
+        path: path,
+        reload: function() {
+          done();
+          return Promise.resolve();
+        },
+      }];
+      var diffsStub = sinon.stub(element, 'diffs', {
+        get: function() { return diffs; },
+      });
+      element.push('_expandedFilePaths', path);
+    });
+
+    test('_renderInOrder', function(done) {
+      var callCount = 0;
+      var diffs = [{
+        path: 'p0',
+        reload: function() {
+          assert.equal(callCount++, 2);
+          return Promise.resolve();
+        },
+      }, {
+        path: 'p1',
+        reload: function() {
+          assert.equal(callCount++, 1);
+          return Promise.resolve();
+        },
+      }, {
+        path: 'p2',
+        reload: function() {
+          assert.equal(callCount++, 0);
+          return Promise.resolve();
+        },
+      }];
+      element._renderInOrder(['p2', 'p1', 'p0'], diffs, 3)
+        .then(function() { done(); });
     });
   });
 </script>
